plugins {
    id 'java'
    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
    id "io.freefair.lombok" version "5.1.0"
}

apply plugin: 'maven-publish'

group 'com.github.Fernthedev'
version '1.0.0'

targetCompatibility = sourceCompatibility = '8'

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
    mavenLocal()
}

dependencies {
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
    testCompile group: 'junit', name: 'junit', version: '4.12'

    implementation "com.github.Fernthedev:FernUtils:1.4.0"
    implementation 'com.google.inject:guice:4.2.3'

    implementation group: 'com.google.auto.service', name: 'auto-service', version: '1.0-rc7'
    annotationProcessor group: 'com.google.auto.service', name: 'auto-service', version: '1.0-rc7'

    implementation 'com.google.code.gson:gson:2.8.6'

    implementation 'com.github.Fernthedev:fern-configmanager:1.3.0'

    implementation 'org.slf4j:slf4j-api:1.7.29'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
}

test {
    useJUnitPlatform()

    // Always run tests, even when nothing changed.
//        dependsOn 'cleanTest'

    // Show test results.
    testLogging {
        events "passed", "skipped", "failed"
    }

    failFast = true
}



compileKotlin {
    kotlinOptions.jvmTarget = "1.8"
}
compileTestKotlin {
    kotlinOptions.jvmTarget = "1.8"
}

afterEvaluate {
    publishing {
        publications {
            maven(MavenPublication) {
                from(components.java)

                groupId = "${rootProject.group}"

                artifactId = "$project.name"

                println "Publishing $groupId:$artifactId:${project.version}"

                java {
                    withSourcesJar()
                    withJavadocJar()
                }
            }
        }
    }
}

tasks.withType(Javadoc).all {
    failOnError = false
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

java {
    withSourcesJar()
    withJavadocJar()
}